--- a/coverPage.tex
+++ b/coverPage.tex
@@ -1,6 +1,6 @@
 \title{\Large ENGG 5103  \\[0.5cm]
         \bf\Large Assignment 1}
-\author{\large Author: \bf Shaozuo YU\\ \ \\}
+\author{\large Author: \bf Alan Turing\\ \ \\}
 \date{\large Date Last Edited: \today}
 
 \makeatletter
@@ -11,7 +11,7 @@
         \vbox{}\vspace{5cm}
             {\@title }\\[3cm] 
             {\@author}
-            {\large Student ID: \bf 1155188715\\ \ \\}
+            {\large Student ID: \bf 114514\\ \ \\}
             {\@date\\}
 
         \end{center}
