--- a/main.tex
+++ b/main.tex
@@ -63,8 +63,8 @@
 \pagestyle{plain}
 
 \begin{flushleft}
-\quad Student Name: Shaozuo YU\\
-\quad Student ID: 1155188715
+\quad Student Name: Alan Turing\\
+\quad Student ID: 114514
 \end{flushleft}
 
 \begin{flushright}\vspace{-15mm}
